--- a/speeding/Base.lproj/Main.storyboard
+++ b/speeding/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,7 +67,7 @@
                                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <connections>
                                                 <action selector="shareTapped:" destination="BYZ-38-t0r" id="Vqi-aV-oGk"/>
-                                                <segue destination="pDq-fe-zlc" kind="show" id="Cjn-19-Dcb"/>
+                                                <segue destination="VtK-KQ-Tah" kind="show" id="k6Q-eY-1D6"/>
                                             </connections>
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" image="Settings-30" id="K4n-2R-Sn3">
@@ -159,6 +158,11 @@
                                 </navigationItem>
                             </items>
                         </navigationBar>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="Wzj-Te-qAd">
+                            <rect key="frame" x="0.0" y="116" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="logIdentifier" id="B1U-mX-9eK">
                                 <rect key="frame" x="0.0" y="72" width="414" height="44"/>
@@ -184,7 +188,126 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="phY-6G-O2N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1225" y="1384"/>
+            <point key="canvasLocation" x="-370" y="1347"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="xFh-CH-He0">
+            <objects>
+                <viewController id="VtK-KQ-Tah" customClass="LogViewController" customModule="speeding" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pLR-pc-KWo"/>
+                        <viewControllerLayoutGuide type="bottom" id="S0H-ag-cw1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pjx-WI-Hms">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmx-YF-1nw">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem id="KXT-M1-4XP">
+                                        <nil key="title"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="bes-cY-LtI">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="shareTapped:" destination="VtK-KQ-Tah" id="Tpg-fl-uQO"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="9xe-3F-Add">
+                                            <rect key="frame" x="124.5" y="7.5" width="165" height="29"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <segments>
+                                                <segment title="Speed"/>
+                                                <segment title="Audio"/>
+                                            </segments>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="segmentChanged:" destination="VtK-KQ-Tah" eventType="valueChanged" id="ah1-DK-YJO"/>
+                                            </connections>
+                                        </segmentedControl>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="P1x-nY-FzD">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ueE-Qo-1Ds">
+                                <rect key="frame" x="0.0" y="796" width="414" height="74"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4UT-id-ksO">
+                                        <rect key="frame" x="8" y="22" width="30" height="30"/>
+                                        <state key="normal" title="Play">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fpe-L9-oji">
+                                        <rect key="frame" x="360" y="27" width="46" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="qCG-d3-1Rj">
+                                        <rect key="frame" x="46" y="22" width="308" height="31"/>
+                                        <connections>
+                                            <action selector="sliderChanged:" destination="VtK-KQ-Tah" eventType="valueChanged" id="W88-Iz-lbx"/>
+                                        </connections>
+                                    </slider>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fpe-L9-oji" firstAttribute="top" secondItem="ueE-Qo-1Ds" secondAttribute="top" constant="27" id="23O-ml-4P4"/>
+                                    <constraint firstItem="4UT-id-ksO" firstAttribute="leading" secondItem="ueE-Qo-1Ds" secondAttribute="leading" constant="8" id="OHg-Z8-6jh"/>
+                                    <constraint firstItem="qCG-d3-1Rj" firstAttribute="leading" secondItem="4UT-id-ksO" secondAttribute="trailing" constant="10" id="S0B-9P-IQp"/>
+                                    <constraint firstAttribute="trailing" secondItem="fpe-L9-oji" secondAttribute="trailing" constant="8" id="WcC-1d-gSq"/>
+                                    <constraint firstItem="qCG-d3-1Rj" firstAttribute="top" secondItem="4UT-id-ksO" secondAttribute="top" id="k4G-NW-YIn"/>
+                                    <constraint firstAttribute="height" constant="74" id="o24-aX-lWk"/>
+                                    <constraint firstItem="fpe-L9-oji" firstAttribute="leading" secondItem="qCG-d3-1Rj" secondAttribute="trailing" constant="8" id="uZa-3L-kZ5"/>
+                                    <constraint firstItem="4UT-id-ksO" firstAttribute="top" secondItem="ueE-Qo-1Ds" secondAttribute="top" constant="22" id="us6-xN-F3Z"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Y1V-5k-JDc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="707"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="logIdentifier" id="fhp-Qc-hxp">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fhp-Qc-hxp" id="UcS-Bd-mUD">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="VtK-KQ-Tah" id="Cam-wq-SqM"/>
+                                    <outlet property="delegate" destination="VtK-KQ-Tah" id="DeP-2o-UmE"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lmx-YF-1nw" firstAttribute="top" secondItem="pLR-pc-KWo" secondAttribute="bottom" id="83s-b1-51f"/>
+                            <constraint firstAttribute="trailing" secondItem="Y1V-5k-JDc" secondAttribute="trailing" id="IPW-4v-WhG"/>
+                            <constraint firstItem="ueE-Qo-1Ds" firstAttribute="centerX" secondItem="Pjx-WI-Hms" secondAttribute="centerX" id="KOM-Ab-MmH"/>
+                            <constraint firstItem="Y1V-5k-JDc" firstAttribute="top" secondItem="pLR-pc-KWo" secondAttribute="bottom" constant="44" id="Mfm-A4-lCa"/>
+                            <constraint firstItem="ueE-Qo-1Ds" firstAttribute="leading" secondItem="lmx-YF-1nw" secondAttribute="leading" id="Rub-TM-lOd"/>
+                            <constraint firstItem="Y1V-5k-JDc" firstAttribute="leading" secondItem="Pjx-WI-Hms" secondAttribute="leading" id="SU3-vR-dte"/>
+                            <constraint firstItem="S0H-ag-cw1" firstAttribute="top" secondItem="Y1V-5k-JDc" secondAttribute="bottom" constant="67" id="gUG-Mx-8ck"/>
+                            <constraint firstItem="ueE-Qo-1Ds" firstAttribute="trailing" secondItem="lmx-YF-1nw" secondAttribute="trailing" id="hcx-xQ-GdY"/>
+                            <constraint firstItem="S0H-ag-cw1" firstAttribute="top" secondItem="ueE-Qo-1Ds" secondAttribute="bottom" constant="-8" id="i09-c7-14b"/>
+                            <constraint firstItem="ueE-Qo-1Ds" firstAttribute="leading" secondItem="Y1V-5k-JDc" secondAttribute="leading" id="uBi-sv-qYY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="bge-wk-3xh"/>
+                    <connections>
+                        <outlet property="segmentOutlet" destination="9xe-3F-Add" id="CmW-lK-5zU"/>
+                        <outlet property="sliderOutlet" destination="qCG-d3-1Rj" id="FUh-yA-yBp"/>
+                        <outlet property="tableView" destination="Y1V-5k-JDc" id="Lj9-Zg-C4l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NTk-aY-4Ny" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="400.00000000000006" y="1384.8214285714284"/>
         </scene>
         <!--Settings Table View Controller-->
         <scene sceneID="AX4-6F-Fne">
@@ -387,6 +510,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Settings-30" width="30" height="30"/>
+        <image name="Settings-30" width="60" height="60"/>
     </resources>
 </document>
